--- a/docs/_layouts/post-droppin-dimes.html
+++ b/docs/_layouts/post-droppin-dimes.html
@@ -6,4 +6,6 @@ layout: default-droppin-dimes
 	<p>{{ page.date | date_to_string }} - {{ page.author }}</p>
 </div>
 
+<main style="text-align: center;">
 {{ content }}
+</main>
