--- a/docs/_sass/main.scss
+++ b/docs/_sass/main.scss
@@ -35,6 +35,12 @@ greek villa - #F0ECE2
 	#about.container-flexbox{
 		font-size: 18px !important;
 	}
+	.blog-post-content {
+		width: 75% !important;
+	}
+	.about-page-content {
+		width: 75% !important;
+	}
 }
 
 html {
@@ -43,20 +49,23 @@ html {
 	overflow-y: scroll;
 }
 
+.website-grid {
+	display: grid;
+	grid-template-rows: repeat(auto, 3);
+}
+
 .container-flexbox {
-	height: 100%;
 	width: 100%;
 	max-width: 100%;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	flex-grow: 1;
 }
 
 .homepage-title {
 	width: 33%;
 	display: flex;
-	font-size: 30px;
+	font-size: 36px;
 	text-align: center;
 }
 
@@ -91,7 +100,7 @@ html {
 
 .nav-bar-item {
 	display: flex;
-	font-size: 24px;
+	font-size: 30px;
 	padding-left: 1vw;
 	padding-right: 1vw;
 }
@@ -114,16 +123,24 @@ a.nav-bar-menu:hover {
 	display: block;
 	width: 25%;
 	max-width: 100%;
-	height: 25%;
+	height: 50%;
 	margin-left: auto;
 	margin-right: auto;
 }
 
-#about.container-flexbox {
+.page-container{
+	display: flex;
+	width: 100%;
 	justify-content: center;
-	align-items: center;
-	flex-flow: column nowrap;
-	font-size: 22px;	
+}
+
+.about-page-content {
+	width: 75%;
+	margin: auto;
+}
+
+p.about-page-content {
+	font-size: 20px;
 }
 
 .about-picture {
@@ -147,12 +164,13 @@ a.nav-bar-menu:hover {
 	width: 33%;
 	max-width: 100%;
 	display: flex;
+	flex-flow: column;
 }
 
 .post-menu-item {
 	width: 100%;
 	display: flex;
-	flex-flow: column nowrap;
+	flex-flow: column wrap;
 }
 
 .post-menu-item-link {
@@ -166,8 +184,9 @@ a.nav-bar-menu:hover {
 }
 
 .blog-post-content {
+	text-align: center;
 	font-size: 20px;
-	width: 75%;
+	width: 50%;
 	margin: auto;
 }
 
@@ -182,4 +201,12 @@ a.nav-bar-menu:hover {
 .solid-blog-section-divider {
 	border-top: 1.5px solid #000000;
 	width: 25%;
+}
+
+a {
+	color: #ff48a5;
+	text-decoration: none;
+} 
+a:hover {
+	text-decoration: underline;
 }
