fix mobile posts page

--- a/docs/_sass/main.scss
+++ b/docs/_sass/main.scss
@@ -41,6 +41,9 @@ greek villa - #F0ECE2
 	.about-page-content {
 		width: 75% !important;
 	}
+	.post-menu {
+		width: 75% !important;
+	}
 }
 
 html {
