fix nav bar alignment
also delete some old css classes that are not in use

--- a/docs/_layouts/default-droppin-dimes.html
+++ b/docs/_layouts/default-droppin-dimes.html
@@ -13,11 +13,11 @@
 			
 	</head>
 	
-	<header class="container-flexbox">
+	<header class="website-header">
 		<b class='homepage-title'>
 		Droppin Dimes
 		</b>
-		<div id='navigation'>
+		<div id='navigation' class="container-flexbox">
 			{% include navigation.html %}
 		</div>
 	</header>
